--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
     <meta http-equiv="pragma" content="no-cache">
@@ -17,7 +18,7 @@
     <script src="js/tp.js"></script>
     <script src="js/buffer.js"></script>
     <script src="js/eos.min.js"></script>
-	<script src="js/scatter.min.js"></script>
+    <script src="js/scatter.min.js"></script>
     <style type="text/css">
         body {
             background-size: cover;
@@ -25,7 +26,7 @@
         }
 
         .form {
-            background: rgba(255,255,255,0.2);
+            background: rgba(255, 255, 255, 0.2);
             width: 400px;
             margin: 50px auto;
         }
@@ -45,29 +46,31 @@
         }
     </style>
 </head>
+
 <body style="overflow-x:hidden" onload="main()">
-<div style="width:50%" hidden>
-	<i class="fa fa-user fa-lg"></i>
-	<select class="form-control required" id="accounts" onchange="walletchange(this)">
-	</select>
-</div>
-<div class="container-fluid" >
-	<div class="form row">
-			<form class="form-horizontal col-sm-offset-4 col-md-offset-4">
+    <div style="width:50%" hidden>
+        <i class="fa fa-user fa-lg"></i>
+        <select class="form-control required" id="accounts" onchange="walletchange(this)">
+        </select>
+    </div>
+    <div class="container-fluid">
+        <div class="form row">
+            <form class="form-horizontal col-sm-offset-4 col-md-offset-4">
                 <div class="col-sm-9 col-md-9">
                     <div class="form-group">
-                        <div class="htmleaf-container" >
+                        <div class="htmleaf-container">
                             <h3 style="text-align: center;" id="cleanrambtn">点击释放</h3>
-							<br/>
-							<div id="circle"></div>
-							<h3 style="text-align: center;" id="raminfo"></h3>
-						</div>
+                            <br />
+                            <div id="circle"></div>
+                            <h3 style="text-align: center;" id="raminfo"></h3>
+                        </div>
                     </div>
                 </div>
             </form>
-	</div>
-</div>
+        </div>
+    </div>
 
 
 </body>
+
 </html>
