修复之前在电脑上scatter 调用不成功的问题

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/dialog.css" rel="stylesheet">
     <script src="js/jquery_2.1.0.min.js"></script>
     <script src="js/include.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -18,7 +19,7 @@
     <script src="js/tp.js"></script>
     <script src="js/buffer.js"></script>
     <script src="js/eos.min.js"></script>
-    <script src="js/scatter.min.js"></script>
+    <script src="js/mDialogMin.js"></script>
     <style type="text/css">
         body {
             background-size: cover;
@@ -47,7 +48,7 @@
     </style>
 </head>
 
-<body style="overflow-x:hidden" onload="main()">
+<body style="overflow-x:hidden">
     <div style="width:50%" hidden>
         <i class="fa fa-user fa-lg"></i>
         <select class="form-control required" id="accounts" onchange="walletchange(this)">
