--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="col-sm-9 col-md-9">
                     <div class="form-group">
                         <div class="htmleaf-container">
-                            <h3 style="text-align: center;" id="cleanrambtn">点击释放</h3>
+                            <h3 style="text-align: center;" id="cleanrambtn">点我释放</h3>
                             <br />
                             <div id="circle"></div>
                             <h3 style="text-align: center;" id="raminfo"></h3>
